<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="64dp"
    android:id="@+id/root_view"
    android:background="@drawable/notification_bg">
    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="4dp"
        android:src="@drawable/clean_selector"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">
        <TextView
            android:id="@+id/find_problem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/problem_found"
            android:textColor="@color/text_color_black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">
            <ImageView
                android:id="@+id/app_one"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="4dp"
                android:scaleType="centerCrop"/>
            <ImageView
                android:id="@+id/app_two"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="4dp"
                android:scaleType="centerCrop"/>
            <ImageView
                android:id="@+id/app_three"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="4dp"
                android:scaleType="centerCrop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/points"
                android:layout_gravity="bottom"
                android:textSize="14sp"
                android:textColor="@color/text_color_black"/>

            <TextView
                android:id="@+id/apps_consume_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:singleLine="true"
                android:textSize="14sp"
                android:textColor="@color/red_end_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:singleLine="true"
                android:textSize="14sp"
                android:text="@string/notification_clean_tips"
                android:textColor="@color/text_color_black"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>