<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="64dp"
    android:background="@drawable/notification_bg">
    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">
        <TextView
            android:id="@+id/time_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charging_time"
            android:textColor="@color/text_color_black"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">
            <TextView
                android:id="@+id/usage_time_hour_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="08"
                android:textSize="20sp"
                android:textColor="@color/text_color_black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour"
                android:layout_marginRight="8dp"
                android:textSize="12sp"
                android:textColor="@color/text_color_black"/>
            <TextView
                android:id="@+id/usage_time_minutes_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="08"
                android:textSize="20sp"
                android:textColor="@color/text_color_black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes"
                android:layout_marginRight="8dp"
                android:textSize="12sp"
                android:textColor="@color/text_color_black"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color_black"
        android:textSize="14sp"
        android:drawablePadding="4dp"
        android:text="20%"
        android:layout_marginRight="4dp"
        android:layout_gravity="center_vertical"
        android:drawableLeft="@drawable/clean_notification_battery"/>

    <TextView
        android:layout_width="1dp"
        android:layout_height="36dp"
        android:background="#33000000"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_gravity="center_vertical"/>
    <ImageView
        android:id="@+id/iv_clean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/clean_selector"
        android:layout_marginRight="8dp"
        android:layout_gravity="center_vertical"/>

</LinearLayout>