<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="?attr/actionBarSize">
        <com.abclauncher.powerboost.view.MaterialRippleLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:mrl_ripple_type="type_round"
            app:mrl_rippleColor="@color/ripple_color_light"
            app:mrl_rippleAlpha="0.1"
            app:mrl_rippleDimension="0dp">
            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_white_24dp"
                android:padding="10dp"/>

        </com.abclauncher.powerboost.view.MaterialRippleLayout>
        <com.abclauncher.powerboost.view.MediumTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/action_about_us"
            android:textColor="@color/text_color_white"
            android:textSize="20sp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"/>
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="center_horizontal"/>
            <com.abclauncher.powerboost.view.NormalTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textColor="@color/text_color_white"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                />

            <com.abclauncher.powerboost.view.NormalTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_des"
                android:layout_marginTop="16dp"
                android:textColor="@color/text_color_light_gray"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                />

            <com.abclauncher.powerboost.view.NormalTextView
                android:id="@+id/app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/text_color_light_gray"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>