<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">
        <com.abclauncher.powerboost.view.MaterialRippleLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:mrl_ripple_type="type_round"
            app:mrl_rippleColor="@color/ripple_color_light"
            app:mrl_rippleAlpha="0.1"
            app:mrl_rippleDimension="0dp">
            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_white_24dp"
                android:padding="10dp"/>

        </com.abclauncher.powerboost.view.MaterialRippleLayout>
        <com.abclauncher.powerboost.view.MediumTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/action_feedback"
            android:textColor="@color/text_color_white"
            android:textSize="20sp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"/>
    </LinearLayout>

    <com.abclauncher.powerboost.view.NormalEditView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/feedback_info"
        android:gravity="center|left|top"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="19.0dip"
        android:layout_marginLeft="20.0dip"
        android:padding="18.0dip"
        android:textColorHint="@color/text_color_light_gray"
        android:background="@drawable/menu_feedback_edit_text_bg"
        android:inputType="textMultiLine"
        android:textColor="@color/text_color_white"
        android:textSize="15.0sp"
        />
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10.0dip"
        android:layout_marginBottom="56dip"
        android:paddingRight="20.0dip"
        android:paddingLeft="20.0dip"
        android:layout_gravity="center">
        <com.abclauncher.powerboost.view.NormalEditView android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/feedback_email"
            android:inputType="textNoSuggestions"
            android:hint="@string/menu_feedback_email"
            android:padding="18.0dip"
            android:background="@drawable/menu_feedback_edit_text_bg"
            android:gravity="center_vertical"
            android:textColorHint="@color/text_color_light_gray"
            android:textColor="@color/text_color_white"
            android:textSize="15.0sp"
            android:lines="1"/>
    </LinearLayout>

    <com.abclauncher.powerboost.view.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginRight="40dip"
        android:layout_marginLeft="40dip"
        android:id="@+id/feedback_submit"
        android:background="@drawable/feedback_activity_btn_bg_selector"
        app:mrl_rippleColor="@color/ripple_color_light"
        app:mrl_rippleAlpha="0.1"
        app:mrl_ripple_background_allowed="false"
        app:mrl_rippleOverlay="true"
        app:mrl_rippleRoundedCorners="20dp">
        <com.abclauncher.powerboost.view.MediumTextView
            android:id="@+id/submit_text"
            android:layout_height="50.0dip"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:textColor="@color/text_color_white"
            android:textSize="18.0sp"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:text="@string/menu_feedback_submit"/>
    </com.abclauncher.powerboost.view.MaterialRippleLayout>

</LinearLayout>